--- a/shareloginpay/build.gradle
+++ b/shareloginpay/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     // 微博
     implementation 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
     // 微信
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.1.4'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.1.4'
     // QQ
     implementation files('libs/alipaySdk-20180403.jar')
     api files('libs/open_sdk_r6008_lite.jar')
